// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spec has logs - changed source 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 100 br: 50 fn: 100 lns: 100",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "1",
      ],
    },
    "secondBarMessage": undefined,
  },
]
`;

exports[`spec has logs - changed spec 1`] = `
Array [
  Object {
    "firstBarMessage": "🐰 st: 100 br: 50 fn: 100 lns: 100",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "4": "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "5": "1",
      },
    },
    "secondBarMessage": undefined,
  },
]
`;
